@@ -2,7 +2,7 @@
 /*
  Cache.cpp : Cache manager source file
 
- (c) 2007-2013 Michele Martone
+ (c) 2007-2017 Michele Martone
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -358,6 +358,7 @@ namespace fim
 		else
 		if( is_in_cache(image) )
 		{
+			lru_touch( image->getKey() ); // we have been using it until now
 			usageCounter_[image->getKey()]--;
 			if(
 				(usageCounter_[image->getKey()])==0 && 
