@@ -7,6 +7,7 @@
  * fix: was likely using uninitialized data in Image()
  * fix: gif error handling could have led to NULL pointer usage.
  * bugfix: conversion from external program was vulnerable to failure due to missing check.
+ * fix: lastly used image will be erased at last, after eventually prefetched images.
 
                 Version 0.4
 
